deploy/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: quadratic
  namespace: functions
spec:
  template:
    spec:
      containers:
        - image: ghcr.io/hexdump95/quadratic:$IMAGE_TAG
          ports:
            - containerPort: 8080
          env:
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  name: quadratic-secrets
                  key: mongodb-uri
